Added functions so users can select to and from

--- a/Booking_App/Booking_App/View/Base.lproj/Main.storyboard
+++ b/Booking_App/Booking_App/View/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
-                                    <segue destination="4U0-wp-hWR" kind="show" id="hcG-Cy-OzJ"/>
+                                    <segue destination="4U0-wp-hWR" kind="show" identifier="goToSelect" id="hcG-Cy-OzJ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="From" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7u-ik-XLS">
