Updated ui, changed api key, added background label to table

--- a/Booking_App/Booking_App/View/Base.lproj/Main.storyboard
+++ b/Booking_App/Booking_App/View/Base.lproj/Main.storyboard
@@ -58,10 +58,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yny-jN-TFA">
-                                <rect key="frame" x="174" y="756" width="67" height="31"/>
+                                <rect key="frame" x="181" y="756" width="54" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Next"/>
                                 <connections>
                                     <segue destination="4U0-wp-hWR" kind="show" identifier="goToSelect" id="hcG-Cy-OzJ"/>
                                 </connections>
@@ -88,16 +88,16 @@
                                 </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PO8-BK-BWC">
-                                <rect key="frame" x="105" y="268" width="67" height="31"/>
+                                <rect key="frame" x="103" y="268" width="72" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sydney"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KNO-9o-FAX">
-                                <rect key="frame" x="285" y="268" width="67" height="31"/>
+                                <rect key="frame" x="277" y="268" width="84" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Canberra"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gPg-bB-Wae"/>
