--- a/Booking_App/Booking_App/Base.lproj/LaunchScreen.storyboard
+++ b/Booking_App/Booking_App/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,15 +13,44 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="pOx-dQ-wzW">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emailPlane" translatesAutoresizingMaskIntoConstraints="NO" id="a3T-l6-EdT">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="aie-Wb-guW">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="300"/>
+                                    </constraint>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="a3T-l6-EdT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Boa-bT-SnK"/>
+                            <constraint firstItem="a3T-l6-EdT" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="GHh-WY-pbc"/>
+                            <constraint firstItem="pOx-dQ-wzW" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="R18-Ee-XjM"/>
+                            <constraint firstAttribute="trailing" secondItem="pOx-dQ-wzW" secondAttribute="trailing" id="Xr9-gm-OFs"/>
+                            <constraint firstAttribute="trailing" secondItem="a3T-l6-EdT" secondAttribute="trailing" id="Z2a-Mo-t5g"/>
+                            <constraint firstAttribute="bottom" secondItem="pOx-dQ-wzW" secondAttribute="bottom" id="ge6-Wz-hw2"/>
+                            <constraint firstItem="pOx-dQ-wzW" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="x6r-Qq-jfu"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="emailPlane" width="643" height="367.33334350585938"/>
+        <image name="launchScreen" width="793.66668701171875" height="1175"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
